tests/bad/invalid_plus.td
/// fail: Cant add int and string

1 + "Hello"